--- a/src/app/styles/_font.scss
+++ b/src/app/styles/_font.scss
@@ -3,8 +3,8 @@
   font-style: normal;
   font-weight: 400;
   src:
-    url('/src/assets/fonts/roboto/Roboto-regular.woff2') format('woff2'),
-    url('/src/assets/fonts/roboto-regular.woff') format('woff');
+    url('@assets/fonts/Roboto/Roboto-regular.woff2') format('woff2'),
+    url('@assets/fonts/Roboto/Roboto-regular.woff') format('woff');
 }
 
 @font-face {
@@ -12,8 +12,8 @@
   font-style: italic;
   font-weight: 400;
   src:
-    url('/src/assets/fonts/roboto-italic.woff2') format('woff2'),
-    url('/src/assets/fonts/roboto-italic.woff') format('woff');
+    url('@assets/fonts/Roboto/Roboto-italic.woff2') format('woff2'),
+    url('@assets/fonts/Roboto/Roboto-italic.woff') format('woff');
 }
 
 @font-face {
@@ -21,8 +21,8 @@
   font-style: normal;
   font-weight: 700;
   src:
-    url('/src/assets/fonts/roboto-bold.woff2') format('woff2'),
-    url('/src/assets/fonts/roboto-bold.woff') format('woff');
+    url('@assets/fonts/Roboto/Roboto-bold.woff2') format('woff2'),
+    url('@assets/fonts/Roboto/Roboto-bold.woff') format('woff');
 }
 
 body {
